--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
   "author": "Gabriel Nordeborn",
   "license": "MIT",
   "dependencies": {
-    "@rescript/core": "^0.6.0",
-    "rescript": "^11.0.0-rc.8",
-    "rescript-bun": "0.3.1"
+    "@rescript/core": "^1.3.0",
+    "rescript": "^11.1.1",
+    "rescript-bun": "0.5.0"
   },
   "devDependencies": {
     "concurrently": "^8.2.2"
